<resources>
    <!-- Name of the app -->
    <string name="app_name">chess360</string>

    <!-- Names of the squares of the chessboard -->
    <string name="a8">Casilla A8</string>
    <string name="b8">Casilla B8</string>
    <string name="c8">Casilla C8</string>
    <string name="d8">Casilla D8</string>
    <string name="e8">Casilla E8</string>
    <string name="f8">Casilla F8</string>
    <string name="g8">Casilla G8</string>
    <string name="h8">Casilla H8</string>
    <string name="a7">Casilla A7</string>
    <string name="b7">Casilla B7</string>
    <string name="c7">Casilla C7</string>
    <string name="d7">Casilla D7</string>
    <string name="e7">Casilla E7</string>
    <string name="f7">Casilla F7</string>
    <string name="g7">Casilla G7</string>
    <string name="h7">Casilla H7</string>
    <string name="a6">Casilla A6</string>
    <string name="b6">Casilla B6</string>
    <string name="c6">Casilla C6</string>
    <string name="d6">Casilla D6</string>
    <string name="e6">Casilla E6</string>
    <string name="f6">Casilla F6</string>
    <string name="g6">Casilla G6</string>
    <string name="h6">Casilla H6</string>
    <string name="a5">Casilla A5</string>
    <string name="b5">Casilla B5</string>
    <string name="c5">Casilla C5</string>
    <string name="d5">Casilla D5</string>
    <string name="e5">Casilla E5</string>
    <string name="f5">Casilla F5</string>
    <string name="g5">Casilla G5</string>
    <string name="h5">Casilla H5</string>
    <string name="a4">Casilla A4</string>
    <string name="b4">Casilla B4</string>
    <string name="c4">Casilla C4</string>
    <string name="d4">Casilla D4</string>
    <string name="e4">Casilla E4</string>
    <string name="f4">Casilla F4</string>
    <string name="g4">Casilla G4</string>
    <string name="h4">Casilla H4</string>
    <string name="a3">Casilla A3</string>
    <string name="b3">Casilla B3</string>
    <string name="c3">Casilla C3</string>
    <string name="d3">Casilla D3</string>
    <string name="e3">Casilla E3</string>
    <string name="f3">Casilla F3</string>
    <string name="g3">Casilla G3</string>
    <string name="h3">Casilla H3</string>
    <string name="a2">Casilla A2</string>
    <string name="b2">Casilla B2</string>
    <string name="c2">Casilla C2</string>
    <string name="d2">Casilla D2</string>
    <string name="e2">Casilla E2</string>
    <string name="f2">Casilla F2</string>
    <string name="g2">Casilla G2</string>
    <string name="h2">Casilla H2</string>
    <string name="a1">Casilla A1</string>
    <string name="b1">Casilla B1</string>
    <string name="c1">Casilla C1</string>
    <string name="d1">Casilla D1</string>
    <string name="e1">Casilla E1</string>
    <string name="f1">Casilla F1</string>
    <string name="g1">Casilla G1</string>
    <string name="h1">Casilla H1</string>

    <!-- Text used in the login screen -->
    <string name="login_username">Nombre de usuario o email</string>
    <string name="login_password">Contraseña</string>
    <string name="login_login_button">Iniciar sesión</string>
    <string name="login_no_account">¿Todavía no tienes una cuenta?</string>
    <string name="login_sign_up_button">REGISTRARSE</string>

    <!-- Text used in the signup form -->
    <string name="signup_first_name">Nombre</string>
    <string name="signup_last_name">Apellidos</string>
    <string name="signup_username">Nombre de usuario</string>
    <string name="signup_email">Email</string>
    <string name="signup_confirm_pass">Confirmar contraseña</string>
    <string name="signup_title">Formulario de registro</string>
    <string name="signup_title_player">Registro de jugador</string>
    <string name="signup_title_club">Registro de club</string>
    <string name="signup_title_organizer">Registro de organizador</string>
    <string name="signup_elo">Elo FIDE</string>
    <string name="signup_phone">Teléfono</string>
    <string name="signup_location">Dirección</string>
    <string name="signup_name">Nombre</string>
    <string name="signup_checkbox">He leído y acepto los términos y condiciones de uso</string>

    <!-- Text used in the dialogs -->
    <string name="dialog_user_added">¡Usuario añadido con éxito!</string>
    <string name="dialog_user_added_title">¡Estás dentro!</string>
    <string name="dialog_continue">CONTINUAR</string>
    <string name="dialog_confirm">CONFIRMAR</string>
    <string name="dialog_discard">CANCELAR</string>
    <string name="error">¡Vaya! Ha ocurrido un error...</string>
    <string name="error_login">La contraseña no se corresponde con el nombre de usuario/email</string>
    <string name="error_user_exists">El usuario ya existe</string>
    <string name="error_pass_dont_match">Las contraseñas no coinciden</string>
    <string name="error_missing_user">El nombre de usuario/email no está registrado</string>
    <string name="error_empty">No puedes dejar campos en blanco</string>
    <string name="error_email_invalid">El email no es válido</string>
    <string name="error_non_numeric_characters">No puedes escribir caracteres no numéricos en el teléfono</string>
    <string name="error_invalid_pass">La contraseña debe tener al menos 8 caracteres e incluir
    una mayúscula, una minúscula, un número y un caracter especial</string>
    <string name="error_checkbox">No has aceptado los términos y condiciones de uso</string>
    <string name="error_email_in_use">El email ya ha sido utilizado para crear una cuenta</string>

    <!-- Text used in the piece promotion -->
    <string name="promotion_title">Elige una pieza</string>

    <!-- Text used for the outcome of the chess game -->
    <string name="white_lost_on_time">El jugador blanco se ha quedado sin tiempo</string>
    <string name="black_lost_on_time">El jugdador negro se ha quedado sin tiempo</string>
    <string name="white_won_checkmate">El jugador blanco gana por jaque mate</string>
    <string name="black_won_checkmate">El jugador negro gana por jaque mate</string>
    <string name="stalemate">Tablas por ahogado</string>

    <!-- Text used in posts -->
    <string name="post_hint">¿En qué estás pensando?</string>
    <string name="post_title">Escribe tu publicación</string>
    <string name="post_confirmation">¡Tu publicación se ha lanzado!</string>
    <string name="post_confirmation_title">Publicación lanzada</string>

    <!-- Text used in the options menu -->
    <string name="log_out_button">Cerrar Sesión</string>
    <string name="go_back_button">Ir atrás</string>
    <string name="home_intent_text">Has salido sin pulsar el botón de login</string>

    <!-- Text used in the search user dialog -->
    <string name="search_title">¿A quién buscas?</string>
    <string name="search_name">Nombre real</string>
    <string name="search_username">Nombre en chess360</string>
    <string name="error_search">No puedes dejar ambos campos en blanco</string>

    <!-- Text used in the user profile -->
    <string name="profile_follow">SEGUIR</string>
    <string name="profile_unfollow">DEJAR DE SEGUIR</string>
    <string name="profile_post">PUBLICAR</string>
    <string name="profile_delete_account">BORRAR CUENTA</string>
    <string name="profile_join_club">UNIRSE AL CLUB</string>
    <string name="profile_leave_club">SALIR DEL CLUB</string>
    <string name="profile_statistics">ESTADÍSTICAS</string>
    <string name="profile_achievements">LOGROS</string>
    <string name="profile_name">Nombre:</string>
    <string name="profile_surname">Apellidos:</string>
    <string name="profile_elo">Elo FIDE:</string>
    <string name="profile_club">Club:</string>
    <string name="profile_coach">Entrenador:</string>
    <string name="profile_location">Localización:</string>
    <string name="profile_phone">Teléfono:</string>

    <!-- Text used int the delete account dialog -->
    <string name="delete_title">Borrar cuenta</string>
    <string name="delete_text">¿Deseas eliminar tu cuenta?</string>
    <string name="delete_yes">SÍ</string>
    <string name="delete_no">NO</string>
    <string name="deleted_title">Usuario eliminado</string>
    <string name="deleted_text">¡Esperamos verte de nuevo!</string>

</resources>