<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="8"
        android:rowCount="8">

        <ImageButton
            android:id="@+id/a8_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/a8"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/b8_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/b8"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/c8_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/c8"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/d8_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/d8"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/e8_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/e8"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/f8_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/f8"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/g8_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/g8"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/h8_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/h8"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/a7_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/a7"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/b7_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/b7"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/c7_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/c7"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/d7_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/d7"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/e7_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/e7"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/f7_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/f7"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/g7_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/g7"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/h7_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/h7"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/a6_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/a6"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/b6_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/b6"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/c6_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/c6"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/d6_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/d6"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/e6_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/e6"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/f6_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/f6"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/g6_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/g6"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/h6_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/h6"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/a5_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/a5"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/b5_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/b5"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/c5_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/c5"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/d5_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/d5"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/e5_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/e5"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/f5_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/f5"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/g5_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/g5"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/h5_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/h5"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/a4_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/a4"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/b4_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/b4"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/c4_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/c4"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/d4_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/d4"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/e4_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/e4"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/f4_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/f4"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/g4_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/g4"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/h4_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/h4"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/a3_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/a3"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/b3_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/b3"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/c3_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/c3"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/d3_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/d3"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/e3_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/e3"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/f3_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/f3"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/g3_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/g3"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/h3_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/h3"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/a2_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/a2"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/b2_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/b2"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/c2_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/c2"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/d2_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/d2"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/e2_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/e2"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/f2_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/f2"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/g2_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/g2"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/h2_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/h2"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/a1_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/a1"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/b1_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/b1"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/c1_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/c1"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/d1_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/d1"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/e1_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/e1"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/f1_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/f1"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/g1_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_brown"
            android:contentDescription="@string/g1"
            android:onClick="selectSquare" />

        <ImageButton
            android:id="@+id/h1_square"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/light_brown"
            android:contentDescription="@string/h1"
            android:onClick="selectSquare" />

    </GridLayout>

    <TextView
        android:id="@+id/nombre_casilla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Nombre de la casilla"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>