<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    android:gravity="center">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/player"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/profile_player_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        tools:text="myUsername"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="5"
        android:columnCount="2"
        android:layout_gravity="center"
        android:background="@drawable/round_style"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/profile_player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/profile_name"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/profile_player_name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:text="miNombre"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/profile_player_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/profile_surname"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/profile_player_surname_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:text="mySurname"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/profile_player_elo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/profile_elo"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/profile_player_elo_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:text="myElo"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/profile_player_club"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/profile_club"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/profile_player_club_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:text="myClub"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/profile_player_coach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/profile_coach"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/profile_player_coach_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:text="myCoach"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"/>

    </GridLayout>

    <Button
        android:id="@+id/profile_player_post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_post"
        android:onClick="makePost"/>

    <Button
        android:id="@+id/profile_player_follow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_follow"
        android:onClick="followPlayer"/>

    <Button
        android:id="@+id/profile_player_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_delete_account"
        android:onClick="deleteAccount"/>

    <Button
        android:id="@+id/profile_player_statistics_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_statistics"
        android:onClick="seeStatistics"/>

    <Button
        android:id="@+id/profile_player_achievements_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_achievements"
        android:onClick="seeAchievements"/>

</LinearLayout>